components/go-analysis/fixtures/bad/suppression-blanket/go.mod
module example.com/standards/bad/suppression-blanket

go 1.23
